fix html distortion with images

--- a/thrift_store_frontend/src/components/MainContent.css
+++ b/thrift_store_frontend/src/components/MainContent.css
@@ -17,6 +17,7 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    margin-bottom:1em;
 }
 .first-title {
     margin-bottom: 2em;
@@ -30,6 +31,10 @@
   max-width: 50%;
   max-height: 50%;
   padding: 6%;
+
+  width: 70em;
+  height: 30em;
+  margin-bottom: 1em;
 }
 
 .section-second {
